[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kbvqa-react-agent"
version = "0.1.0"
description = "A lightweight ReAct-style KB-VQA agent using local knowledge and OpenAI-compatible APIs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24",
]

[tool.setuptools.packages.find]
include = ["kbvqa*"]
